compilateurDeca/src/test/deca/syntax/invalid/objet/return_semi.deca
// Description:
//   Return sans point-virgule dans le corps de méthode.
// Resultats:
//    Echec (erreur de syntaxe)
//
// Historique:
//    cree le 15/01/2026

class A {
    int f() { return 1 }
}
{
}
